# Examen-parcial-3

./: CMakeLists.txt  README.md  launcher.cpp  launcher.h  main.cpp
actores/: Actores.cpp  Actores.h
crud/: Crud.cpp  Crud.h
tarea/: Tarea.cpp  Tarea.h
